fixed text sticking out

--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ overflow: hidden;
 .scene { perspective: 2000px; }
 
 .book {
-  width: 400px;
-  height: 500px;
+  width: 300px;
+  height: 400px;
   position: relative;
   transform-style: preserve-3d;
   transition: transform 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -46,6 +46,10 @@ text-align: justify;
 padding: 35px;
 box-sizing: border-box;
 border-radius: 2px 8px 8px 2px;
+}
+
+.page-side p{
+    font-size: 11.5px;
 }
 
 .front {
@@ -95,7 +99,7 @@ box-shadow: inset 0 0 30px rgba(0,0,0,0.4);
 .flipped { transform: rotateY(-180deg); }
 
 .book.final-center {
-  transform: translateX(400px);
+  transform: translateX(300px);
   transition: transform 1.2s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
